--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Editing Customer</h1>
+<div class="container">
+<br>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+<li class="nav-item">
+    <a class="nav-link active" id="active-tab" data-toggle="tab" href="#active" role="tab" aria-controls="active" aria-selected="false">แก้ไขข้อมูลลูกค้า</a>
 
+  </li>
+  </ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="pending" role="tabpanel" aria-labelledby="pending-tab">
+
+<p id="notice"><%= notice %></p>
+ <br>
 <%= render 'form', customer: @customer %>
 
-<%= link_to 'Show', @customer %> |
 <%= link_to 'Back', customers_path %>
+
+ </div>
+<hr>
+<a href="/bilss">ใบแจ้งหนี้</a>
+
+</div>
