--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,25 +1,42 @@
+
+<div class="container">
+<br>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+<li class="nav-item">
+    <a class="nav-link active" id="active-tab" data-toggle="tab" href="#active" role="tab" aria-controls="active" aria-selected="false">รายการลูกค้า</a>
+
+  </li>
+  </ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="pending" role="tabpanel" aria-labelledby="pending-tab">
+
 <p id="notice"><%= notice %></p>
+ <br>
+<h4>รายการลูกค้า <a href="/customers/new"><button style="padding:5px;width:200px;background-color:lightgreen;margin-left:50px;">เพิ่มลูกค้าใหม่</button></a></h4>
+<table border="1">
+  <tr>
+    <th style="padding:5px 10px;width:400px;">ชื่อลูกค้า</th>
+    <th style="padding:5px 10px;">วงเงิน</th>
+    <th style="padding:5px 10px;">แก้ไข</th>
+    <th style="padding:5px 10px;">ลบ</th>
 
-<h1>Customers</h1>
-
-<table>
-  <thead>
+  </tr>
+  <% @customers.each do |customer| %>
     <tr>
-      <th colspan="3"></th>
+      <td style="padding:5px 10px;"><%= customer.name %></td>
+      <td style="padding:5px 10px;"><%= customer.credit %></td>
+      <td style="padding:5px 10px;">
+      <a href='/customers/<%= customer.id %>:id/edit'>Edit</a></td>
+      <td style="padding:5px 10px;">
+      <a href='/customers/<%= customer.id %>/destroy' onclick='confirm("Are you Delete?")'>DELETE</a></td>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+  <% end %>
 </table>
 
-<br>
+ </div>
+<hr>
+<a href="/bills">ใบแจ้งหนี้</a>
 
-<%= link_to 'New Customer', new_customer_path %>
+</div>
+
+ 
