--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Invoice</h1>
 
+<div class="container">
+<br>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+<li class="nav-item">
+    <a class="nav-link active" id="active-tab" data-toggle="tab" href="#active" role="tab" aria-controls="active" aria-selected="false">สร้างใบแจ้งหนี้</a>
+
+  </li>
+  </ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="pending" role="tabpanel" aria-labelledby="pending-tab">
+
+<p id="notice"><%= notice %></p>
+ <br>
 <%= render 'form', invoice: @invoice %>
 
 <%= link_to 'Back', invoices_path %>
+
+ </div>
+<hr>
+<a href="/bills">ใบแจ้งหนี้</a>
+
+</div>
